分页排序相关修改

--- a/tourist-web/src/main/webapp/view/manage/platform/purchaserPaymentRecord/purchaserPaymentRecordList.html
+++ b/tourist-web/src/main/webapp/view/manage/platform/purchaserPaymentRecord/purchaserPaymentRecordList.html
@@ -65,12 +65,12 @@
             <tr>
                 <th data-field="state" data-checkbox="true"></th>
                 <th data-field="id" data-align="center" data-sortable="true">id</th>
-                <th data-field="buyerName" data-align="center" data-sortable="true">采购商名称</th>
-                <th data-field="buyerDirector" data-align="center" data-sortable="true">负责人</th>
-                <th data-field="telPhone" data-align="center" data-sortable="true">手机号</th>
+                <th data-field="buyerName" data-align="center">采购商名称</th>
+                <th data-field="buyerDirector" data-align="center">负责人</th>
+                <th data-field="telPhone" data-align="center">手机号</th>
                 <th data-field="buyerId" data-align="center" data-sortable="true">用户id</th>
                 <th data-field="nickname" data-align="center" data-sortable="true">用户昵称</th>
-                <th data-field="payState.value" data-align="center" data-sortable="true">支付状态</th>
+                <th data-field="payState.value" data-align="center">支付状态</th>
                 <th data-field="money" data-align="center" data-sortable="true">支付金额</th>
                 <th data-field="payDate" data-align="center" data-sortable="true">支付时间</th>
             </tr>
