--- a/tourist-web/src/main/webapp/view/manage/platform/purchaserProductSetting/purchaserProductSettingList.html
+++ b/tourist-web/src/main/webapp/view/manage/platform/purchaserProductSetting/purchaserProductSettingList.html
@@ -52,13 +52,11 @@
             <tr>
                 <th data-field="id" data-align="center" data-sortable="true">id</th>
                 <th data-field="name" data-align="center" data-sortable="true">名称</th>
-                <th data-field="bannerUri" data-formatter="bannerUriFormatter" data-align="center" data-sortable="true">
-                    banner
-                </th>
+                <th data-field="bannerUri" data-formatter="bannerUriFormatter" data-align="center"> banner</th>
                 <th data-field="price" data-align="center" data-sortable="true">价格</th>
-                <th data-field="explain" data-align="center" data-sortable="true">说明</th>
+                <th data-field="explain" data-align="center">说明</th>
                 <th data-field="action" data-formatter="updateFormatter" data-events="actionEvents" data-align="center"
-                    data-sortable="true">操作
+                >操作
                 </th>
             </tr>
             </thead>
