--- a/tourist-web/src/main/webapp/view/manage/platform/settlementSheet/settlementSheetList.html
+++ b/tourist-web/src/main/webapp/view/manage/platform/settlementSheet/settlementSheetList.html
@@ -80,11 +80,11 @@
                     <thead>
                     <tr>
                         <th data-field="id" data-align="center" data-sortable="true">提现编号</th>
-                        <th data-field="supplierName" data-align="center" data-sortable="true">供应商名称</th>
+                        <th data-field="supplierName" data-align="center">供应商名称</th>
                         <th data-field="createTime" data-align="center" data-sortable="true">提现日期</th>
                         <th data-field="amountOfMoney" data-align="center" data-sortable="true">提现金额</th>
                         <th data-field="accountBalance" data-align="center" data-sortable="true">当前账户余额</th>
-                        <th data-field="presentState.value" data-align="center" data-sortable="true">审核状态</th>
+                        <th data-field="presentState.value" data-align="center">审核状态</th>
                         <th data-field="action" data-formatter="presentFormatter" data-align="center">操作</th>
                     </tr>
                     </thead>
