--- a/tourist-web/src/main/webapp/view/manage/platform/touristGood/touristGoodList.html
+++ b/tourist-web/src/main/webapp/view/manage/platform/touristGood/touristGoodList.html
@@ -96,14 +96,14 @@
                         <th data-field="touristName" data-align="center" data-sortable="true">商品名称</th>
                         <th data-field="touristImgUri" data-formatter="touristImgUriFormatter" data-align="center">图片
                         </th>
-                        <th data-field="supplierName" data-align="center" data-sortable="true">供应商名称</th>
-                        <th data-field="touristType" data-align="center" data-sortable="true">线路类型</th>
-                        <th data-field="activityType" data-align="center" data-sortable="true">活动类型</th>
+                        <th data-field="supplierName" data-align="center">供应商名称</th>
+                        <th data-field="touristType" data-align="center">线路类型</th>
+                        <th data-field="activityType" data-align="center">活动类型</th>
                         <th data-field="price" data-align="center" data-sortable="true">价格</th>
                         <th data-field="surplus" data-align="center" data-sortable="true">剩余库存</th>
-                        <th data-field="destination" data-align="center" data-sortable="true">目的地</th>
+                        <th data-field="destination" data-align="center">目的地</th>
                         <th data-field="rebate" data-align="center" data-sortable="true">佣金比例</th>
-                        <th data-field="touristCheckState.value" data-align="center" data-sortable="true">审核状态</th>
+                        <th data-field="touristCheckState.value" data-align="center">审核状态</th>
                         <th data-field="action" data-formatter="actionFormatter" data-events="actionEvents"
                             data-align="center">操作
                         </th>
@@ -124,17 +124,17 @@
                     <thead>
                     <tr>
                         <th data-field="id" data-align="center" data-sortable="true">id</th>
-                        <th data-field="touristName" data-align="center" data-sortable="true">商品名称</th>
+                        <th data-field="touristName" data-align="center">商品名称</th>
                         <th data-field="touristImgUri" data-formatter="touristImgUriFormatter" data-align="center">图片
                         </th>
-                        <th data-field="supplierName" data-align="center" data-sortable="true">供应商名称</th>
-                        <th data-field="touristType" data-align="center" data-sortable="true">线路类型</th>
-                        <th data-field="activityType" data-align="center" data-sortable="true">活动类型</th>
+                        <th data-field="supplierName" data-align="center">供应商名称</th>
+                        <th data-field="touristType" data-align="center">线路类型</th>
+                        <th data-field="activityType" data-align="center">活动类型</th>
                         <th data-field="price" data-align="center" data-sortable="true">价格</th>
                         <th data-field="surplus" data-align="center" data-sortable="true">剩余库存</th>
-                        <th data-field="destination" data-align="center" data-sortable="true">目的地</th>
+                        <th data-field="destination" data-align="center">目的地</th>
                         <th data-field="rebate" data-align="center" data-sortable="true">佣金比例</th>
-                        <th data-field="touristCheckState.value" data-align="center" data-sortable="true">审核状态</th>
+                        <th data-field="touristCheckState.value" data-align="center">审核状态</th>
                         <th data-field="action" data-formatter="actionFormatter" data-events="actionEvents"
                             data-align="center">操作
                         </th>
