--- a/tourist-web/src/main/webapp/view/manage/platform/touristBuyer/touristBuyerList.html
+++ b/tourist-web/src/main/webapp/view/manage/platform/touristBuyer/touristBuyerList.html
@@ -75,8 +75,8 @@
                 </th>
                 <th data-field="buyerId" data-align="center" data-sortable="true">用户id</th>
                 <th data-field="nickname" data-align="center" data-sortable="true">用户昵称</th>
-                <th data-field="checkState.value" data-align="center" data-sortable="true">状态</th>
-                <th data-field="payState.value" data-align="center" data-sortable="true">支付状态</th>
+                <th data-field="checkState.value" data-align="center">状态</th>
+                <th data-field="payState.value" data-align="center">支付状态</th>
                 <th data-field="action" data-formatter="actionFormatter" data-events="actionEvents" data-align="center">
                     操作
                 </th>
