线路表和线路行程表双向关联

--- a/tourist-web/src/main/webapp/view/manage/platform/touristBuyer/touristBuyerList.html
+++ b/tourist-web/src/main/webapp/view/manage/platform/touristBuyer/touristBuyerList.html
@@ -68,9 +68,9 @@
                 <th data-field="buyerDirector" data-align="center" data-sortable="true">负责人</th>
                 <th data-field="telPhone" data-align="center" data-sortable="true">手机号</th>
                 <th data-field="businessLicencesUri" data-formatter="businessLicencesUriFormatter" data-align="center"
-                    data-sortable="true">营业执照
+                >营业执照
                 </th>
-                <th data-field="IDCardImg" data-formatter="IDCardImgFormatter" data-align="center" data-sortable="true">
+                <th data-field="IDCardImg" data-formatter="IDCardImgFormatter" data-align="center">
                     身份证
                 </th>
                 <th data-field="buyerId" data-align="center" data-sortable="true">用户id</th>
