--- a/tourist-web/src/main/webapp/view/wap/orderInfo.html
+++ b/tourist-web/src/main/webapp/view/wap/orderInfo.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
     <meta name="viewport"
           content="width=device-width,minimum-scale=1,user-scalable=no,maximum-scale=1,initial-scale=1"/>
@@ -118,16 +118,20 @@
     <!--底部高度-->
     <p style="height: 80px; clear: both"></p>
     <!--底部导航-->
-    <div class="weui_navbar daohangs"><a href="javascript:void(0);" class="weui_navbar_item">
-        <p class="kimg dhshouyeicon"></p>
-        <p>首页</p>
-    </a> <a href="javascript:void(0);" class="weui_navbar_item ">
-        <p class="kimg dhsousuoicon"></p>
-        <p>搜索</p>
-    </a> <a href="javascript:void(0);" class="weui_navbar_item weui_bar_item_on">
-        <p class="kimg dhwodeicon"></p>
-        <p> 我的</p>
-    </a></div>
+    <div class="weui_navbar daohangs">
+        <a href="index.html" class="weui_navbar_item weui_bar_item_on">
+            <p class="kimg dhshouyeicon"></p>
+            <p>首页</p>
+        </a>
+        <a href="search.html" class="weui_navbar_item ">
+            <p class="kimg dhsousuoicon"></p>
+            <p>搜索</p>
+        </a>
+        <a href="my.html" class="weui_navbar_item">
+            <p class="kimg dhwodeicon"></p>
+            <p> 我的</p>
+        </a>
+    </div>
 
     <!---->
 </div>
