--- a/tourist-web/src/main/webapp/view/wap/touristGoodInfo.html
+++ b/tourist-web/src/main/webapp/view/wap/touristGoodInfo.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
     <meta name="viewport"
           content="width=device-width,minimum-scale=1,user-scalable=no,maximum-scale=1,initial-scale=1"/>
@@ -89,19 +89,23 @@
                 </div>
             </div>
         </div>
-        <div class="weui_cells weui_cells_access"><a class="weui_cell" href="javascript:;">
-            <div class="weui_media_box weui_media_text" style="padding: 0px; width: 100%">
-                <h4 class="weui_media_title">乌鲁木齐俱乐部</h4>
-                <ul class="weui_media_info" style="margin-top: 6px">
-                    <li class="weui_media_info_meta levelz"><img class="yrzimg" src="../../assets/img/yrz.png">已认证</li>
-                    <li class="weui_media_info_meta levelx">12条路线</li>
-                </ul>
-                <ul class="weui_media_info" style="margin-top: 8px;">
-                    <li class="weui_media_info_meta">地接人：王剑南</li>
-                    <li class="weui_media_info_meta">联系电话：0571-13205713331</li>
-                </ul>
-            </div>
-            <span class="weui_cell_ft"></span> </a></div>
+        <div class="weui_cells weui_cells_access">
+            <a class="weui_cell" href="touristSupplier.html">
+                <div class="weui_media_box weui_media_text" style="padding: 0px; width: 100%">
+                    <h4 class="weui_media_title">乌鲁木齐俱乐部</h4>
+                    <ul class="weui_media_info" style="margin-top: 6px">
+                        <li class="weui_media_info_meta levelz"><img class="yrzimg" src="../../assets/img/yrz.png">已认证
+                        </li>
+                        <li class="weui_media_info_meta levelx">12条路线</li>
+                    </ul>
+                    <ul class="weui_media_info" style="margin-top: 8px;">
+                        <li class="weui_media_info_meta">地接人：王剑南</li>
+                        <li class="weui_media_info_meta">联系电话：0571-13205713331</li>
+                    </ul>
+                </div>
+                <span class="weui_cell_ft"></span>
+            </a>
+        </div>
         <div class="weui_navbar" style="margin-top: 10px;">
             <div class="weui_navbar_item orange weui_bar_item_on "> 活动详情</div>
             <div class="weui_navbar_item orange"> 注意事项</div>
@@ -109,10 +113,8 @@
         <img src="../../assets/img/a1.jpg" width="100%"></div>
     <p style="height:40px;"></p>
     <div class="item-action">
-        <div class="toggle-home"><a href=""><span class="icon"></span>首页</a></div>
-
+        <div class="toggle-home"><a href="index.html"><span class="icon"></span>首页</a></div>
         <div class="buy-now yuanjiaoo"><a href="procurement.html"> 立即采购 </a></div>
-
     </div>
     <!---->
 </div>
@@ -131,7 +133,6 @@
 <script type="text/javascript">
 
     $(function () {
-
         var swiper = new Swiper('.switch-container', {
             pagination: '.swiper-pagination',
             slidesPerView: 2.5,
@@ -153,7 +154,5 @@
 
             }
         });
-
-
     });
 </script>
