--- a/tourist-web/src/main/webapp/view/wap/allOrder.html
+++ b/tourist-web/src/main/webapp/view/wap/allOrder.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
     <meta name="viewport"
           content="width=device-width,minimum-scale=1,user-scalable=no,maximum-scale=1,initial-scale=1"/>
@@ -151,6 +151,7 @@
 
     <!--底部高度-->
     <p style="height: 80px; clear: both"></p>
+    <!--底部导航-->
     <!--底部导航-->
     <div class="weui_navbar daohangs">
         <a href="index.html" class="weui_navbar_item weui_bar_item_on">
