--- a/tourist-web/src/main/webapp/view/wap/index.html
+++ b/tourist-web/src/main/webapp/view/wap/index.html
@@ -1,4 +1,13 @@
 <!doctype html>
+<!--
+  ~ 版权所有:杭州火图科技有限公司
+  ~ 地址:浙江省杭州市滨江区西兴街道阡陌路智慧E谷B幢4楼
+  ~
+  ~ (c) Copyright Hangzhou Hot Technology Co., Ltd.
+  ~ Floor 4,Block B,Wisdom E Valley,Qianmo Road,Binjiang District
+  ~ 2013-2017. All rights reserved.
+  -->
+
 <html xmlns:th="http://www.thymeleaf.org" xmlns:res="http://resource.jiangcai.me" lang="en">
 <head>
     <meta name="viewport"
@@ -179,135 +188,8 @@
             </div>
             <div class="weui_cell_ft"></div>
         </a></div>
-        <div class="leftboxtwo">
-            <div class="cont-zhbox" style="margin: 0px">
-                <div class="cont-zhbox-t" style="border-radius: 0px; padding: 0px">
-                    <a href="touristGoodInfo.html" class="bz">
-                        <p class="cont-zhbox-img" style="margin: 0px"><img src="../../assets/img/a1.jpg"></p>
-                        <p class="cont-zhbox-nav"></p>
-                    </a>
-                    <div class="zhbox" style="margin: 7px 3px;">
-                        <div class="zh-wz">
-                            <div class="zh-wz-x">
-                                <div class="zh-wz-name" style="margin: 0px 4px;">西藏云南8日轻装游，赶快报名！</div>
-                            </div>
-                            <div class="zh-wz-time"><span
-                                    style="float:left;color:#FF5558;font-size: 16px;padding: 8px 0px 3px 0px;">￥199</span>
-                                <p style="clear:both"></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="leftboxtwo">
-            <div class="cont-zhbox" style="margin: 0px">
-                <div class="cont-zhbox-t" style="border-radius: 0px; padding: 0px">
-                    <a href="touristGoodInfo.html" class="bz">
-                        <p class="cont-zhbox-img" style="margin: 0px"><img src="../../assets/img/a1.jpg"></p>
-                        <p class="cont-zhbox-nav"></p>
-                    </a>
-                    <div class="zhbox" style="margin: 7px 3px;">
-                        <div class="zh-wz">
-                            <div class="zh-wz-x">
-                                <div class="zh-wz-name" style="margin: 0px 4px;">西藏云南8日轻装游，赶快报名！</div>
-                            </div>
-                            <div class="zh-wz-time"><span
-                                    style="float:left;color:#FF5558;font-size: 16px;padding: 8px 0px 3px 0px;">￥199</span>
-                                <p style="clear:both"></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="leftboxtwo">
-            <div class="cont-zhbox" style="margin: 0px">
-                <div class="cont-zhbox-t" style="border-radius: 0px; padding: 0px">
-                    <a href="touristGoodInfo.html" class="bz">
-                        <p class="cont-zhbox-img" style="margin: 0px"><img src="../../assets/img/a1.jpg"></p>
-                        <p class="cont-zhbox-nav"></p>
-                    </a>
-                    <div class="zhbox" style="margin: 7px 3px;">
-                        <div class="zh-wz">
-                            <div class="zh-wz-x">
-                                <div class="zh-wz-name" style="margin: 0px 4px;">西藏云南8日轻装游，赶快报名！</div>
-                            </div>
-                            <div class="zh-wz-time"><span
-                                    style="float:left;color:#FF5558;font-size: 16px;padding: 8px 0px 3px 0px;">￥199</span>
-                                <p style="clear:both"></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="leftboxtwo">
-            <div class="cont-zhbox" style="margin: 0px">
-                <div class="cont-zhbox-t" style="border-radius: 0px; padding: 0px">
-                    <a href="touristGoodInfo.html" class="bz">
-                        <p class="cont-zhbox-img" style="margin: 0px"><img src="../../assets/img/a1.jpg"></p>
-                        <p class="cont-zhbox-nav"></p>
-                    </a>
-                    <div class="zhbox" style="margin: 7px 3px;">
-                        <div class="zh-wz">
-                            <div class="zh-wz-x">
-                                <div class="zh-wz-name" style="margin: 0px 4px;">西藏云南8日轻装游，赶快报名！</div>
-                            </div>
-                            <div class="zh-wz-time"><span
-                                    style="float:left;color:#FF5558;font-size: 16px;padding: 8px 0px 3px 0px;">￥199</span>
-                                <p style="clear:both"></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="leftboxtwo">
-            <div class="cont-zhbox" style="margin: 0px">
-                <div class="cont-zhbox-t" style="border-radius: 0px; padding: 0px">
-                    <a href="touristGoodInfo.html" class="bz">
-                        <p class="cont-zhbox-img" style="margin: 0px"><img src="../../assets/img/a1.jpg"></p>
-                        <p class="cont-zhbox-nav"></p>
-                    </a>
-                    <div class="zhbox" style="margin: 7px 3px;">
-                        <div class="zh-wz">
-                            <div class="zh-wz-x">
-                                <div class="zh-wz-name" style="margin: 0px 4px;">西藏云南8日轻装游，赶快报名！</div>
-                            </div>
-                            <div class="zh-wz-time"><span
-                                    style="float:left;color:#FF5558;font-size: 16px;padding: 8px 0px 3px 0px;">￥199</span>
-                                <p style="clear:both"></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="leftboxtwo">
-            <div class="cont-zhbox" style="margin: 0px">
-                <div class="cont-zhbox-t" style="border-radius: 0px; padding: 0px">
-                    <a href="touristGoodInfo.html" class="bz">
-                        <p class="cont-zhbox-img" style="margin: 0px"><img src="../../assets/img/a1.jpg"></p>
-                        <p class="cont-zhbox-nav"></p>
-                    </a>
-                    <div class="zhbox" style="margin: 7px 3px;">
-                        <div class="zh-wz">
-                            <div class="zh-wz-x">
-                                <div class="zh-wz-name" style="margin: 0px 4px;">西藏云南8日轻装游，赶快报名！</div>
-                            </div>
-                            <div class="zh-wz-time"><span
-                                    style="float:left;color:#FF5558;font-size: 16px;padding: 8px 0px 3px 0px;">￥199</span>
-                                <p style="clear:both"></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="weui-infinite-scroll">
-            <div class="infinite-preloader"></div>
-            滑动加载更多
+        <div id="touristsRegion">
+            <a href="tourist.html" class="next" th:href="@{/touristList(offset=0)}">&nbsp;</a>
         </div>
 
         <!--底部高度-->
@@ -334,6 +216,7 @@
 </body>
 </html>
 <script src="http://resali.huobanplus.com/cdn/jquery/2.2.4/jquery.min.js"></script>
+<script src="../../assets/js/jquery.jscroll.min.js"></script>
 <script src="http://resali.huobanplus.com/cdn/jquery-weui/0.8.2/jquery-weui.min.js"></script>
 <script type="text/javascript" src="js/w/swiper.animate1.0.2.min.js"></script>
 <script src="http://resali.huobanplus.com/cdn/jquery-weui/0.8.2/swiper.min.js"></script>
@@ -341,5 +224,12 @@
     $(".swiper-container").swiper({
         loop: true,
         autoplay: 3000
+    });
+    $('#touristsRegion').jscroll({
+        loadingHtml: '<div class="weui-infinite-scroll"><div class="infinite-preloader"></div>滑动加载更多 </div>',
+        nextSelector: 'a.next:last',
+        callback: function () {
+            /// do something
+        }
     });
 </script>
